Project/chatAPP/full-stack_chatApp/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: chat-app
spec:
  type: NodePort      # <--- Exposes the service outside the cluster
  ports:
    - port: 80        # The port Nginx is listening on inside the container
      targetPort: 80
      nodePort: 30007 # The port you will use in your browser (must be between 30000-32767)
  selector:
    app: frontend     # <--- Must match the label in your frontend-deployment.yml
